add page content

--- a/guide_map/assets/css/main.css
+++ b/guide_map/assets/css/main.css
@@ -1373,6 +1373,10 @@
 			color: #000000;
 			padding: 3em 3em 3em;
 		}
+		
+		#main .pagecontent h1{
+			color:#000;
+		}
 			@media screen and (max-width: 480px) {
 
 				#main .pagecontent {
